Fix posts-collapse layout

--- a/source/css/_common/components/post/post-collapse.styl
+++ b/source/css/_common/components/post/post-collapse.styl
@@ -1,5 +1,6 @@
 .posts-collapse {
   margin-left: $posts-collapse-margin;
+  margin-top: $posts-collapse-margin;
   position: relative;
 
   +mobile() {
