--- a/source/css/_schemes/Mist/_layout.styl
+++ b/source/css/_schemes/Mist/_layout.styl
@@ -27,6 +27,10 @@ hr {
 
 .content {
   padding-top: 80px;
+
+  +mobile() {
+    padding-top: 60px;
+  }
 }
 
 // Pagination
